[package]
name = "iotunnel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "iotunnel"
path = "src/main.rs"

[dependencies]
tokio  = { version = "1", features = ["full"] }
serde  = { version = "1", features = ["derive"] }
toml   = "0.8"
libc   = "0.2"
anyhow = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
